--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 /* CUSTOM PROPS */
 :root {
   --cyan: #5fb4a2;
-  --dark-blue: #203a4c:
+  --dark-blue: #203a4c;
   --grayish-dark-blue: #33323d;
   --light-grey-bg: #fafafa;
   --light-grey-text: #eaeaeb;
@@ -94,10 +94,10 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
-  font-family: "Arial", sans-serif;
+  font-family: "Public Sans", "Arial", sans-serif;
   font-size: 16px;
-  background-color: #ffffff;
-  color: #222222;
+  background-color: #fafafa;
+  color: var(--grayish-dark-blue);
 }
 
 img {
@@ -147,9 +147,9 @@ select:-webkit-autofill:focus {
 /* CONTAINER  */
 .container {
   width: 100%;
-  max-width: 1200px;
-  padding-left: 50px;
-  padding-right: 50px;
+  max-width: 1110px;
+  padding-left: 20px;
+  padding-right: 20px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -158,6 +158,66 @@ select:-webkit-autofill:focus {
 .main-content {
   flex-grow: 1;
 }
+
+/* SITE-HEADER  */
+.site-header {
+  padding-top: 64px;
+  padding-bottom: 54px;
+}
+.site-header__container {
+  display: flex;
+  justify-content: space-between;
+}
+.site-header__logo {
+  margin-right: 30px;
+}
+.logo {
+  display: block;
+  text-decoration: none;
+}
+.logo__img {
+  display: block;
+  width: 60px;
+  height: 32px;
+  object-fit: contain;
+}
+
+.logo__img:hover {
+  opacity: 0.8;
+}
+
+.logo__img:active {
+  opacity: 0.6;
+}
+
+.sitenav__list {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.sitenav__item:not(:last-child) {
+  margin-right: 42px;
+}
+
+.sitenav__link {
+  display: block;
+  font-size: 12px;
+  letter-spacing: 2px;
+  color: var(--grayish-dark-blue);
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.sitenav__link:hover {
+  color: var(--cyan);
+}
+
+.sitenav__link:active {
+  opacity: 0.6;
+}
+
 
 @media
 only screen and (-webkit-min-device-pixel-ratio: 2),
